--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,5 +4,24 @@
 
 :root {
    background: #190a00;
-   color: white
+   color: white;
+   -ms-overflow-style: none;
+   scrollbar-width: none;
+
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+   -moz-appearance: textfield;
+}
+
+:root::-webkit-scrollbar {
+   display: none;
 }
